<resources>
    <string name="app_name">MapProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sevice">Service</string>
    <string name="teacher">Teacher</string>
    <string name="family">Family</string>
    <string name="pw">Password</string>
    <string name="email">E-Mail</string>
    <string name="no">No</string>
    <string name="teacherName">Teacher Name</string>
    <string name="rememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="addChildren">Add Children</string>
    <string name="addingChildrenTopic">ADD CHILDREN</string>
    <string name="addSafetyLcation">Safety Location</string>
    <string name="schoolNumber">School Number</string>
    <string name="childrenName">Children Name</string>
    <string name="add">Add</string>
    <string name="addLocation">Add Location</string>
    <string name="service">He/She will use service</string>
    <string name="chatButton">Chat</string>
    <string name="invalidateAuthetication">Authentication Error! Please Check Your E-Mail and Password!</string>
    <string name="somethingWentsWrong">Something Wents Wrong! Please Contact to Admin!</string>
    <string name="request">Registration requests</string>
    <string name="chat">CHAT</string>
    <string name="chatSub">With Driver</string>
    <string name="list">LIST OF</string>
    <string name="listOfStudent">List Of Student</string>
    <string name="student">Student</string>
    <string name="where">WHERE</string>
    <string name="whereSub">Is The Bus?</string>
    <string name="addNewStudent">ADD</string>
    <string name="addNewStudentSub">New Student</string>
    <string name="welcomeParent">Welcome Parent</string>
    <string name="nameSurname">Name Surname</string>
    <string name="locationName">Location Name</string>
    <string name="selectLocation">Select Safety Location</string>
    <string name="requestToast">A request has been sent to the teacher for student registration!</string>
    <string name="serviceMoving">Service in motion</string>
    <string name="attitude">Attitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="touchToOpen">Touch to open</string>
    <string name="yourHere">You Are Here!</string>
    <string name="longtitude">Longtitude: </string>
    <string name="close">Kapat</string>
    <string name="wrongStudentInfo">Student name or surname do not be empty/blank!</string>
    <string name="uploadImageSuccess">Image Upload Successful!</string>
    <string name="uploadImageFail">Image Upload Fail!</string>
    <string name="loading">Loading...</string>
    <string name="wherIsTheBusTopic">BUS LOCATION</string>
    <string name="giveLocationName">Please give name for selected location!</string>
    <string name="newLocation">New Location Point!</string>
    <string name="locationAddSuccess">Location Adding Success</string>
    <string name="locationAddFail">Location Adding Failed!</string>
</resources>