<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:layout_marginTop="56dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pw"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/id"
        app:layout_constraintStart_toStartOf="@+id/id"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pw"
        app:layout_constraintStart_toStartOf="@+id/pw"
        app:layout_constraintTop_toBottomOf="@+id/pw" />

    <Button
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/rememberMe"
        app:layout_constraintStart_toStartOf="@+id/rememberMe"
        app:layout_constraintTop_toBottomOf="@+id/rememberMe" />

</androidx.constraintlayout.widget.ConstraintLayout>